--- a/back/css/MainBack_media.css
+++ b/back/css/MainBack_media.css
@@ -152,11 +152,17 @@
     }
 
     .BeyondDrama .inner {
-        width: 90%
+        width: 90%;
     }
 
     .BeyondDrama .inner .top .h2 {
         font-size: 40px;
+    }
+
+    .BeyondDrama .inner .BDcontents {
+        height: 1052px;
+        display: flex;
+        justify-content: space-between;
     }
 
     .BeyondDrama .inner .BDcontents .BDconTop {
@@ -169,11 +175,11 @@
     .BeyondDrama .inner .BDcontents .BDconTop .BDsection01,
     .BeyondDrama .inner .BDcontents .BDconTop .BDsection02,
     .BeyondDrama .inner .BDcontents .BDconTop .BDsection03,
-     .BeyondDrama .inner .BDcontents .BDconBottom .BDsection09,
-     .BeyondDrama .inner .BDcontents .BDconBottom .BDsection10
-     {
+    .BeyondDrama .inner .BDcontents .BDconBottom .BDsection08,
+    .BeyondDrama .inner .BDcontents .BDconBottom .BDsection09 {
         height: 320px;
     }
+
     .BeyondDrama .inner .BDcontents .BDconTop .BDsection01_txt h3,
     .BeyondDrama .inner .BDcontents .BDconTop .BDsection02_txt h3,
     .BeyondDrama .inner .BDcontents .BDconTop .BDsection03_txt h3,
@@ -182,10 +188,11 @@
     .BeyondDrama .inner .BDcontents .BDconBottom .BDsection10 h3 {
         font-size: 20px;
     }
+
     .BeyondDrama .inner .BDcontents .BDconMiddle {
         position: relative;
         left: 250px;
-    } 
+    }
 
     /* BDconBottom 반응형 */
     .BeyondDrama .inner .BDcontents .BDconBottom {
@@ -218,8 +225,10 @@
         object-fit: cover;
     }
 
-    /* BDsection10은 section_bottom에서 제거 (디자인에 없음) */
     .BeyondDrama .inner .BDcontents .BDconBottom .BDsection10 {
+        position: absolute;
+        right: 0;
+        bottom: 355px;
         width: 358px;
         height: 353px;
     }
@@ -458,7 +467,7 @@
         gap: 40px;
     }
 
-   /*  .LatestNews .inner .top {
+    /*  .LatestNews .inner .top {
         padding-bottom: 50px;
     }
  */
@@ -505,9 +514,9 @@
     }
 
     /* 텍스트 컨테이너 */
-    .LatestNews .inner .LNcontents .LNcon01 > div,
-    .LatestNews .inner .LNcontents .LNcon02 > div,
-    .LatestNews .inner .LNcontents .LNcon03 > div {
+    .LatestNews .inner .LNcontents .LNcon01>div,
+    .LatestNews .inner .LNcontents .LNcon02>div,
+    .LatestNews .inner .LNcontents .LNcon03>div {
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -570,6 +579,7 @@
 }
 
 @media screen and (max-width:860px) {
+
     /* LatestNews 섹션 860px */
     .LatestNews {
         padding-top: 120px;
@@ -592,9 +602,9 @@
         gap: 50px;
     }
 
-    .LatestNews .inner .LNcontents .LNcon01 > div,
-    .LatestNews .inner .LNcontents .LNcon02 > div,
-    .LatestNews .inner .LNcontents .LNcon03 > div {
+    .LatestNews .inner .LNcontents .LNcon01>div,
+    .LatestNews .inner .LNcontents .LNcon02>div,
+    .LatestNews .inner .LNcontents .LNcon03>div {
         gap: 18px;
         max-width: 500px;
     }
@@ -729,9 +739,9 @@
         gap: 40px;
     }
 
-    .LatestNews .inner .LNcontents .LNcon01 > div,
-    .LatestNews .inner .LNcontents .LNcon02 > div,
-    .LatestNews .inner .LNcontents .LNcon03 > div {
+    .LatestNews .inner .LNcontents .LNcon01>div,
+    .LatestNews .inner .LNcontents .LNcon02>div,
+    .LatestNews .inner .LNcontents .LNcon03>div {
         gap: 16px;
         max-width: 420px;
     }
@@ -824,6 +834,7 @@
 }
 
 @media screen and (max-width:570px) {
+
     /* LatestNews 섹션 570px */
     .LatestNews {
         padding-top: 90px;
@@ -847,9 +858,9 @@
         border-radius: 0 25px 25px 25px;
     }
 
-    .LatestNews .inner .LNcontents .LNcon01 > div,
-    .LatestNews .inner .LNcontents .LNcon02 > div,
-    .LatestNews .inner .LNcontents .LNcon03 > div {
+    .LatestNews .inner .LNcontents .LNcon01>div,
+    .LatestNews .inner .LNcontents .LNcon02>div,
+    .LatestNews .inner .LNcontents .LNcon03>div {
         gap: 14px;
         max-width: 350px;
     }
@@ -1088,7 +1099,116 @@
         font-size: 20px;
     }
 
+    .BeyondDrama {
+        width: 100%;
+        height: 1500px;
+    }
 
+    .BeyondDrama .inner .top {
+        width: 100vW;
+
+    }
+
+    .BeyondDrama .inner .top h2 {
+        font-size: 30px;
+        padding-right: 10px;
+    }
+
+    .BeyondDrama .inner .top button {
+        background: url(../img/arrow-up-right_B.png) center/cover;
+        width: 26px;
+        height: 26px;
+        cursor: pointer;
+    }
+
+    .BeyondDrama .inner .top button span {
+        display: none;
+    }
+
+    .BeyondDrama .inner .BDcontents {
+        width: 380px;
+        height: 1300px;
+        justify-content: space-between;
+    }
+
+    .BeyondDrama .inner .BDcontents .BDconTop {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        object-fit: cover;
+        overflow: hidden;
+    }
+
+    .BeyondDrama .inner .BDcontents .BDconTop .BDsection01 img,
+    .BeyondDrama .inner .BDcontents .BDconTop .BDsection02 img,
+    .BeyondDrama .inner .BDcontents .BDconTop .BDsection03 img{
+        width: 380px;
+        height: 150px;
+    }
+
+    /* .BDconMiddle 반응형 */
+    .BeyondDrama .inner .BDcontents .BDconMiddle  {
+        position: relative;
+        width: 380px;
+        height: 150px;
+        left: 200px;
+        justify-content: space-between;
+    }
+
+    .BeyondDrama .inner .BDcontents .BDconMiddle .BDsection04,
+    .BeyondDrama .inner .BDcontents .BDconMiddle .BDsection05,
+    .BeyondDrama .inner .BDcontents .BDconMiddle .BDsection06,
+    .BeyondDrama .inner .BDcontents .BDconMiddle .BDsection07 {
+        width: 260px;
+        height: 50px;
+    }
+    .BeyondDrama .inner .BDcontents .BDconMiddle h3 {
+        font-size: 20px;
+    }
+
+    /* .BDconBottom 반응형 */
+    .BeyondDrama .inner .BDcontents .BDconBottom {
+        width: 380px;
+        height: 474px;
+        flex-direction: column;
+        justify-content: space-between;
+        object-fit: cover;
+        overflow: hidden;
+        gap: 12px;
+    }
+
+    .BeyondDrama .inner .BDcontents .BDconBottom .BDsection08 {
+        width: 380px;
+        height: 150px;
+    }
+
+    .BeyondDrama .inner .BDcontents .BDconBottom .BDsection08 img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+    }
+
+    .BeyondDrama .inner .BDcontents .BDconBottom .BDsection09 {
+        width: 380px;
+        height: 150px;
+    }
+
+    .BeyondDrama .inner .BDcontents .BDconBottom .BDsection09 img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .BeyondDrama .inner .BDcontents .BDconBottom .BDsection10 {
+        position: static;
+        right: 0;
+        bottom: 355px;
+        width: 380px;
+        height: 150px;
+    }
+
+    
 
 
 
@@ -1369,9 +1489,9 @@
         justify-content: center;
     }
 
-    .LatestNews .inner .LNcontents .LNcon01 > div,
-    .LatestNews .inner .LNcontents .LNcon02 > div,
-    .LatestNews .inner .LNcontents .LNcon03 > div {
+    .LatestNews .inner .LNcontents .LNcon01>div,
+    .LatestNews .inner .LNcontents .LNcon02>div,
+    .LatestNews .inner .LNcontents .LNcon03>div {
         max-width: 100%;
         width: 100%;
         display: flex;
@@ -1425,6 +1545,7 @@
         0% {
             transform: translateX(100%);
         }
+
         100% {
             transform: translateX(-100%);
         }
