--- a/moon/css/pg-style.css
+++ b/moon/css/pg-style.css
@@ -41,7 +41,7 @@ main {
 /* 히어로 텍스트 */
 .hero {
   width: 100%;
-  /* margin-top: 200px; */
+  margin-top: 180px;
   padding: 239px 0;
   background: linear-gradient(transparent 20%, #fff 40%);
 }
