--- a/css/common_moon.css
+++ b/css/common_moon.css
@@ -123,7 +123,8 @@ header {
     display: flex;
     justify-content: center;
     z-index: 10;
-    position: relative;
+    /* position: relative; */
+    position: fixed;
     left: 0;
     top: 0;
     transition: top 1.2s;
