yulssem 컨펌 수정 10.24.6.32

--- a/css/common.css
+++ b/css/common.css
@@ -109,7 +109,10 @@
 body {
     font-family: "Assistant", sans-serif;
 }
-
+.wrap{
+    width: 100%;
+    overflow-x: hidden;
+}
 .inner {
     width: 1520px;
     margin-inline: auto;
