--- a/css/common.css
+++ b/css/common.css
@@ -108,12 +108,12 @@
 
 body {
     font-family: "Assistant", sans-serif;
+    min-height: 5000px;
 }
 
 .inner {
     width: 1520px;
     margin-inline: auto;
-    height: 5000px;
 }
 
 header {
@@ -389,7 +389,6 @@ nav.mobile ~ .ham ul li:nth-child(3) {
 
 main {
     position: relative;
-    height: 5000px;
 }
 
 /* footer */
