--- a/back/css/MainBack_media.css
+++ b/back/css/MainBack_media.css
@@ -2,7 +2,7 @@
 
 @media screen and (max-width:1519px) {
     .inner {
-        width: 95%;
+        width: 85%;
     }
 }
 
@@ -15,10 +15,22 @@
 @media screen and (max-width:1023px) {
 
     .inner {
-        width: 865px;
+        width: 85%;
+    }
+
+    .circlebody {
+        width: 100%;
+        height: 510px;
+        perspective: 1000px;
+        margin-top: 3vw;
+        overflow: hidden;
     }
 
     /* Coming Soon 섹션 */
+    .comingsoon {
+        padding-top: 10vw;
+    }
+
     .comingsoon .inner .top {
         width: 398px;
     }
@@ -44,13 +56,16 @@
         bottom: 24px;
     }
 
+
+
     /* ON-AIR 섹션 반응형 */
     .onair {
-        height: auto;
+        height: 950px;
+        padding-top: 180px;
     }
 
     .onair .inner {
-        width: 90%;
+        width: 85%;
     }
 
     .onair .inner .top {
@@ -62,50 +77,32 @@
         font-size: 40px;
     }
 
-    .onair .ONcon {
-        flex-direction: row;
-        justify-content: center;
-        gap: 0;
-        height: auto;
-    }
-
-    /* 왼쪽 이미지 (ONcontents01) */
-    .onair .ONcon>div:first-child img {
-        width: 400px;
-        height: 450px;
-        opacity: 0.5;
-        transform: scale(0.9) translateX(-40%);
-    }
 
     /* 가운데 활성 이미지 (ONcontents02) */
     .onair .ONcon>div.active {
         z-index: 10;
     }
 
-    .onair .ONcon>div.active img {
-        width: 450px;
-        height: 600px;
+    .onair .ONcon>div img {
+        width: 350px;
+        height: 400px;
         opacity: 1;
         transform: scale(1);
     }
 
-    /* 오른쪽 이미지 (ONcontents03) */
-    .onair .ONcon>div:last-child img {
+    .onair .ONcon>div.swiper-slide-active img {
         width: 400px;
-        height: 450px;
-        opacity: 0.5;
-        transform: scale(0.9) translateX(40%);
+        height: 400px;
     }
 
     /* 텍스트 박스 - 가운데만 표시 */
     .onair .ONcon>div .ONtxtbox {
         width: 100%;
-        max-width: 493px;
+        max-width: 450px;
         gap: 32px;
     }
 
     .onair .ONcon>div.active .ONtxtbox {
-        opacity: 1;
         visibility: visible;
         max-height: 400px;
     }
@@ -138,24 +135,39 @@
     }
 
     /* GigTit 섹션 */
-    .GigTit h3 {
+    .GigTit {
+        margin-top: 0;
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    .GigTit .BGtit h3 {
         font-size: 160px;
     }
 
-    .GigTit span {
+    .GigTit .BGtit span {
         font-size: 40px;
     }
 
+
+
     /* Beyond Drama 섹션 */
+
+
     .BeyondDrama {
         width: auto;
+        padding-bottom: 0;
     }
 
     .BeyondDrama .inner {
-        width: 90%;
+        width: 85%;
     }
 
-    .BeyondDrama .inner .top .h2 {
+    .BeyondDrama .inner .top {
+        width: 865px;
+    }
+
+    .BeyondDrama .inner .top h2 {
         font-size: 40px;
     }
 
@@ -193,6 +205,13 @@
         position: relative;
         left: 250px;
     }
+
+    .BeyondDrama .BDconMiddle h3 {
+        font-size: 30px;
+        font-weight: 400;
+    }
+
+
 
     /* BDconBottom 반응형 */
     .BeyondDrama .inner .BDcontents .BDconBottom {
@@ -237,8 +256,14 @@
 
 
     /* ViewersPlayground 섹션 반응형 */
+    .ViewersPlayground {
+        padding-top: 180px;
+        padding-bottom: 0;
+    }
+
     .ViewersPlayground .inner {
         width: 864px;
+        gap: 0;
     }
 
     .ViewersPlayground .inner .top {
@@ -267,8 +292,8 @@
         width: 100%;
     }
 
-    .ViewersPlayground .inner .VPcontents .VPcon01 img {
-        width: 50vw;
+    .ViewersPlayground .VPcon01 img {
+        width: 40vw;
         height: 400px;
         border-radius: 0 100px 100px 0;
         object-fit: cover;
@@ -309,8 +334,8 @@
         width: 100%;
     }
 
-    .ViewersPlayground .inner .VPcontents .VPcon02 img {
-        width: 50vw;
+    .ViewersPlayground .VPcon02 img {
+        width: 40vw;
         height: 400px;
         border-radius: 100px 0 0 100px;
         object-fit: cover;
@@ -353,8 +378,8 @@
         width: 100%;
     }
 
-    .ViewersPlayground .inner .VPcontents .VPcon03 img {
-        width: 50vw;
+    .ViewersPlayground .VPcon03 img {
+        width: 40vw;
         height: 400px;
         border-radius: 0 100px 100px 0;
         object-fit: cover;
@@ -386,15 +411,15 @@
         line-height: 1.3;
     }
 
-    /* Event 섹션 반응형 */
+    /* Event 섹션 반응형 - 삼각형 구도 */
     .event {
-        padding-top: 150px;
-        padding-bottom: 80px;
+        padding-top: 180px;
+        padding-bottom: 0;
     }
 
     .event .inner {
-        width: 864px;
-        gap: 40px;
+        width: 85%;
+        gap: 10px;
     }
 
     .event .inner .top h2 {
@@ -402,28 +427,58 @@
     }
 
     .event .Econtents {
-        height: 600px;
+        height: 700px;
         gap: 8px;
+        position: relative;
+        max-width: 100%;
     }
 
     .event .Econ01,
     .event .Econ02,
     .event .Econ03 {
-        width: 380px;
-        height: 380px;
+        width: 300px;
+        height: 300px;
+        position: absolute;
+        transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
 
-    .event .Econ01:hover,
-    .event .Econ03:hover {
-        width: 480px;
-        height: 480px;
-        transform: translateY(60px);
+    /* 삼각형 구도 배치 - 반응형 위치 */
+    .event .Econ01 {
+        left: 5%;
+        top: 300px;
+    }
+
+    .event .Econ02 {
+        left: 260px;
+        top: 10px;
+        /* transform: translateX(-50%); */
+    }
+
+    .event .Econ03 {
+        right: 5%;
+        top: 300px;
+    }
+
+    /* Hover 시 안전한 확장 효과 */
+    .event .Econ01:hover {
+        width: 400px;
+        height: 400px;
+        transform: translate(0px, -30px);
+        z-index: 10;
     }
 
     .event .Econ02:hover {
-        width: 480px;
-        height: 480px;
-        transform: translateY(-120px);
+        width: 400px;
+        height: 400px;
+        transform: translate(-50px, -50px);
+        z-index: 10;
+    }
+
+    .event .Econ03:hover {
+        width: 400px;
+        height: 400px;
+        transform: translate(0px, -30px);
+        z-index: 10;
     }
 
     .event .Econ01 h3,
@@ -438,8 +493,18 @@
         font-size: 30px;
     }
 
+    .event .Econ01:hover h3,
+    .event .Econ02:hover h3,
+    .event .Econ03:hover h3 {
+        transform: translateY(-100px);
+    }
+
     .event .event-info-card {
-        padding: 30px 25px;
+        padding: 20px 25px;
+    }
+
+    .event .card-content {
+        gap: 5px;
     }
 
     .event .event-date,
@@ -452,7 +517,7 @@
     }
 
     .event .event-btn {
-        padding: 10px 24px;
+        padding: 15px 15px;
         font-size: 14px;
     }
 
@@ -463,7 +528,7 @@
     }
 
     .LatestNews .inner {
-        width: 864px;
+        width: 85%;
         gap: 40px;
     }
 
