--- a/intro_kim/css/intro_media.css
+++ b/intro_kim/css/intro_media.css
@@ -1,14 +1,20 @@
 @charset "utf-8";
 
+:root{
+  /* 데스크톱 기본: (vw - 1520)/2, 단 최소 110px 보장 */
+  --page-pad: clamp(110px, calc((100vw - 1520px) / 2), 2000px);
+}
+
 @media screen and (max-width:1024px) {
 
-    header,
-    footer {
+    :root   { --page-pad: 80px; }   /* ← 전역에서 고정 */
+
+    header{
         display: none;
     }
 
     .inner {
-        width: 90%;
+        width: 100%;
         max-width: 100%;
     }
 
@@ -18,8 +24,8 @@
     }
 
     .main_cach {
-        height: 34vh;
-        padding: 400px 0 250px 0;
+        height: 100vh;
+        padding: 500px 0 250px 0;
     }
 
     .main_cach .img_roll div {
@@ -216,7 +222,6 @@
         border-radius: 12px;
     }
 
-    .history { --page-pad: 80px; }
 
     .history .inner h3.tit {
         margin-top: 100px;
@@ -262,11 +267,55 @@
     margin-bottom: 100px;
 }
 
+.v_and_m {
+   padding: 100px 0;
+   height: 100%;
+    padding-inline: var(--page-pad);
+}
+
+.v_and_m .cont article {
+    width: 100%;
+    height: 420px;
+}
+
+.v_and_m .cont article .txt {
+    opacity: 0;
+    transform: translateY(40px);
+    left: 50px;
+    right: 50px;
+    top: 40%;
+}
+
+.v_and_m .cont article::before {
+    background-image: url(../assets/vision_1024.jpg);
+}
+
+.v_and_m .cont article.mission::before {
+    background-image: url(../assets/mission_1024.jpg);
+}
+
+.v_and_m .cont article::after {
+    left: 50px;
+    width: 100px;
+    height: 50px;
+    font-size: 16px;
+}
+
+.v_and_m .txt p {
+    font-size: 30px;
+}
+
+.v_and_m .txt em {
+    font-size: 14px;
+}
+
 
 
 }
 
 @media screen and (max-width:440px) {
+
+    :root   { --page-pad: 24px; }
 
     .main_cach .txt {
         max-width: 382px;
@@ -280,7 +329,6 @@
         font-size: 18px;
     }
 
-    .history { --page-pad: 24px; }
 
     .history .inner h3.tit {
         margin-top: 100px;
@@ -302,8 +350,8 @@
 
 .history .cont_hori_swipe ul li h5.years {
     position: absolute;
-    left: 44px;
-    font-size: 40px;
+    left: 34px;
+    font-size: 30px;
 }
 
 .history .cont_hori_swipe ul li p {
@@ -312,8 +360,8 @@
 
 
 .history .cont_hori_swipe ul li img {
-    width: 314px;
-    height: 158px;
+    width: 260px;
+    height: 132px;
 }
 
 .history .cont_hori_swipe ul li em {
