--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -2,7 +2,7 @@
 
 :root{
   /* 데스크톱 기본: (vw - 1520)/2, 단 최소 110px 보장 */
-  --page-pad: clamp(110px, calc((100vw - 1520px) / 2), 2000px);
+    --page-pad: clamp(110px, calc((100vw - 1520px) / 2), 2000px);
 }
 
 * {
@@ -100,7 +100,7 @@ section {
     color: var(--Wcolor);
 }
 
-.main_cach .txt p{
+.main_cach .txt p span{
     font-size: 70px;
     font-weight: 700;
     line-height: 130%;
@@ -108,7 +108,6 @@ section {
     padding: 0 10px;
     display: inline-block;
 }
-
 
 .main_cach .txt em {
     font-size: 30px;
@@ -125,7 +124,7 @@ section {
 h3.tit {
     font-size: 56px;
     font-weight: 700;
-    width: 1520px;
+    width: 100%;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -282,7 +281,9 @@ h3.tit {
     padding-bottom: 150px;
 }
 
+
 .ci .inner {
+    margin-top: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -295,10 +296,6 @@ h3.tit {
     height: 100px;
     background-color: var(--Wcolor);
     border-radius: 0 0 120px 120px;
-}
-
-.ci h3.tit {
-    margin-top: 100px;
 }
 
 .ci .cont {
